--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,23 @@
-
+<%= @post.title %> <br>
+<%= @post.content %> <br>
+<% @post.categories.each do |category|%> 
+    <%= category.name%> <br>
+<% end %>
+<% @post.comments.each do |comment|%>
+    <%= "#{comment.user.username} says: #{comment.content}" %> <br>
+<% end %>
+<% @post.users.uniq.each do |user|%>
+    <%= link_to user.username, user_path(user) %> <br>
+<% end %>
+<br>
+<%= form_for @comment do |f|%>
+    <%= f.label :content %>
+    <%= f.text_field :content %> <br>
+    <%= f.collection_select :user_id, User.all, :id, :username, include_blank: "none" %> <br>
+    <%= f.fields_for :user_attributes, @comment.user do |user_fields|%>
+        <%= user_fields.text_field :username %>
+    <% end %>
+    <%= f.hidden_field :post_id, value: @post.id %> 
+    <%= f.submit %>
+<% end %>
+</div>
