--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,6 +10,7 @@
     <%= link_to user.username, user_path(user) %> <br>
 <% end %>
 <br>
+<h4>New Comment</h4>
 <%= form_for @comment do |f|%>
     <%= f.label :content %>
     <%= f.text_field :content %> <br>
